# fuelkick

./: Cargo.toml  Forc.toml  README.md
contracts/: Forc.toml
contracts/src/: interface.sw  main.sw  math.sw  physics.sw
contracts/tst/: Cargo.toml  Forc.toml
contracts/tst/src/: harness.rs
src/: interface.sw  math.sw
tests/functions/: constructor.rs  mod.rs
tests/utils/: setup.rs
