[project]
name = "fuelkick"
version = "0.0.0"
authors = ["Ryan Sproule <ryan@blockchain.capital>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.34.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"